--- a/ReactJs/form/src/App.css
+++ b/ReactJs/form/src/App.css
@@ -36,18 +36,24 @@
     transform: rotate(360deg);
   }
 }
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
+label {
+  display: block;
 }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+.custom-input {
+  padding-bottom: 2%;
 }
 
-tr:nth-child(even) {
-  background-color: #dddddd;
+.custom-input-error label {
+  color: red;
+}
+
+.custom-input-error input {
+  border: 2px solid red;
+  border-radius: 4px;
+}
+
+.error {
+  color: red;
+  margin: 0;
 }
